<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.light.notes.ui.start.StartFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/title_startFragment"
        android:textSize="@dimen/title_start_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRoom"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/room_start_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

    <Button
        android:id="@+id/btnFirebase"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/firebase_start_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoom" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_margin="@dimen/large_margin"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_email"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/btnFirebase"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_margin="@dimen/app_margin"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_password"
        android:inputType="textWebPassword"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/btn_login"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>